--- a/privately/app/build.gradle
+++ b/privately/app/build.gradle
@@ -17,11 +17,21 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
-    }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
 
+
+    }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 
     sourceSets {
         main {
@@ -156,6 +166,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
 
     //查看高清大图
@@ -204,6 +215,6 @@ dependencies {
     implementation 'com.github.LinweiJ:ViewPagerIndicator:0.1.0'
 
     implementation 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'
-
-//    implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
+    //饺子播放器
+    implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
 }
