--- a/privately/app/build.gradle
+++ b/privately/app/build.gradle
@@ -19,6 +19,15 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
+
+        //        正确的做法
+//        当前市面绝大多数是arm的CPU，而且都是V7架构的了，所以可以保留armeabi或者armeabi-v7a即可。
+//        如果仅保留armeabi-v7a，而有些第三方包未提供v7a的包，则可以将对应armeabi包拷贝到armeabi-v7a。
+//        如果同时保留armeabi和armeabi-v7a，则需要保证两个目录下的so库文件数相同。
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a'
+        }
+
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
@@ -35,6 +44,8 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
+            jniLibs.srcDirs = ['src/main/libs']
+            jni.srcDirs = []
         }
     }
 
@@ -60,6 +71,7 @@ android {
         }
     }
 
+    useLibrary 'org.apache.http.legacy'
 
 //    applicationVariants.all { variant ->
 //
@@ -145,9 +157,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'androidx.test:runner:1.1.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
 
     /**
