--- a/privately/easeui/build.gradle
+++ b/privately/easeui/build.gradle
@@ -30,15 +30,15 @@ android {
 dependencies {
     //release时需要把hyphenatechatsdk的依赖注释掉，sdk已经被打成jar包放在libs底下
 //    //api project(':hyphenatechatsdk')
-    api 'com.hyphenate:hyphenate-sdk:3.6.1'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    api 'com.hyphenate:hyphenate-sdk-lite:3.6.1'
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.github.bumptech.glide:glide:4.7.1'
 
-    implementation 'com.google.android.gms:play-services-base:11.4.0'
+//    api 'com.google.android.gms:play-services-base:11.4.0'
 
-    testImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    testImplementation 'junit:junit:4.12'
+//    testImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+    api "androidx.appcompat:appcompat:1.0.0"
+//    testImplementation 'junit:junit:4.12'
 }
