--- a/privately/app/build.gradle
+++ b/privately/app/build.gradle
@@ -34,6 +34,11 @@ android {
         }
 
 
+        packagingOptions {
+            //解决编译时com.android.builder.merge.DuplicateRelativeFileException: More than one file was found with OS independent path 'META-INF/rxjava.properties'这个错误
+            exclude 'META-INF/rxjava.properties'
+        }
+
     }
     repositories {
         flatDir {
@@ -179,6 +184,10 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
 
     //查看高清大图
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
@@ -228,6 +237,9 @@ dependencies {
     implementation 'com.github.Aspsine:SwipeToLoadLayout:1.0.4'
     //饺子播放器
     implementation 'cn.jzvd:jiaozivideoplayer:7.0.5'
+
+    implementation 'com.arialyy.aria:aria-core:3.6.6'
+    annotationProcessor 'com.arialyy.aria:aria-compiler:3.6.6'
 
     implementation project(':library')
     implementation project(':easeui')
