--- a/privately/app/build.gradle
+++ b/privately/app/build.gradle
@@ -241,6 +241,7 @@ dependencies {
 
     implementation 'com.arialyy.aria:aria-core:3.6.6'
     annotationProcessor 'com.arialyy.aria:aria-compiler:3.6.6'
+    implementation 'com.lxj:xpopup:1.8.9'
 
     implementation project(':library')
     implementation project(':easeui')
