--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -56,6 +56,9 @@
         tools:replace="label,allowBackup">
         <activity android:name=".business.attention.BuZhangXinxiActivity"></activity>
 
+
+        <meta-data android:name="android.max_aspect" android:value="2.4" />
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
@@ -181,6 +184,7 @@
         <activity
             android:name=".business.main.MainActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustResize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" /> <!-- 登录页 -->
         <activity
