--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -223,12 +223,14 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
             </intent-filter>
-        </receiver> <!-- <meta-data -->
-        <!-- android:name="UMENG_APPKEY" -->
-        <!-- android:value="5cecca2b570df318b40009ff" /> &lt;!&ndash; 个推SDK配置开始 &ndash;&gt; -->
-        <!-- <meta-data -->
-        <!-- android:name="UMENG_CHANNEL" -->
-        <!-- android:value="${UMENG_CHANNEL_VALUE}" /> &lt;!&ndash; 配置的第三方参数属性 &ndash;&gt; -->
+        </receiver>
+
+         <meta-data
+         android:name="UMENG_APPKEY"
+         android:value="5d779a32570df3055a000488" /> <!-- 个推SDK配置开始 -->
+<!--         <meta-data-->
+<!--         android:name="UMENG_CHANNEL"-->
+<!--         android:value="${UMENG_CHANNEL_VALUE}" /> &lt;!&ndash; 配置的第三方参数属性 &ndash;&gt;-->
         <activity
             android:name="com.umeng.socialize.media.WBShareCallBackActivity"
             android:configChanges="keyboardHidden|orientation"
@@ -249,6 +251,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+
+
+        <!-- QQ登录开始 -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
@@ -258,14 +264,18 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
+                <!-- 这地方需要用你在开放平台申请的appid:tencent+appid -->
                 <data android:scheme="tencent1109739836" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <!-- QQ登录结束 -->
+
     </application>
 
 </manifest>
