--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -54,10 +54,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="label,allowBackup">
-        <activity android:name=".business.attention.BuZhangXinxiActivity"></activity>
+        <activity android:name=".business.message.ConversationListActivity"></activity>
+        <activity android:name=".business.attention.BuZhangXinxiActivity" />
 
-
-        <meta-data android:name="android.max_aspect" android:value="2.4" />
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.4" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -68,10 +70,19 @@
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" /> <!-- 适配全面屏 -->
+
+
         <!-- 企业所在地 -->
         <activity
             android:name=".business.me.EnterpriseLocationActivity"
-            android:screenOrientation="portrait" /> <!-- 认证公司 -->
+            android:screenOrientation="portrait" />
+
+        <!-- 企业所在地 -->
+        <activity
+            android:name=".easechat.ChatActivity"
+            android:screenOrientation="portrait" />
+
+        <!-- 认证公司 -->
         <activity
             android:name=".business.me.CertificationCompanyActivity"
             android:screenOrientation="portrait" /> <!-- 我的签到 -->
@@ -184,9 +195,9 @@
         <activity
             android:name=".business.main.MainActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait" /> <!-- 登录页 -->
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" /> <!-- 登录页 -->
         <activity
             android:name=".business.login.LoginActivity"
             android:screenOrientation="portrait" />
@@ -225,12 +236,12 @@
             </intent-filter>
         </receiver>
 
-         <meta-data
-         android:name="UMENG_APPKEY"
-         android:value="5d779a32570df3055a000488" /> <!-- 个推SDK配置开始 -->
-<!--         <meta-data-->
-<!--         android:name="UMENG_CHANNEL"-->
-<!--         android:value="${UMENG_CHANNEL_VALUE}" /> &lt;!&ndash; 配置的第三方参数属性 &ndash;&gt;-->
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5d779a32570df3055a000488" /> <!-- 个推SDK配置开始 -->
+        <!-- <meta-data -->
+        <!-- android:name="UMENG_CHANNEL" -->
+        <!-- android:value="${UMENG_CHANNEL_VALUE}" /> &lt;!&ndash; 配置的第三方参数属性 &ndash;&gt; -->
         <activity
             android:name="com.umeng.socialize.media.WBShareCallBackActivity"
             android:configChanges="keyboardHidden|orientation"
@@ -250,11 +261,7 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity>
-
-
-
-        <!-- QQ登录开始 -->
+        </activity> <!-- QQ登录开始 -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
@@ -268,13 +275,18 @@
                 <data android:scheme="tencent1109739836" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <!-- QQ登录结束 -->
+
+
+        <!-- 显示下载大图页面 -->
+        <activity
+            android:name="com.hyphenate.easeui.ui.EaseShowBigImageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/horizontal_slide" />
 
     </application>
 
