--- a/privately/easeui/build.gradle
+++ b/privately/easeui/build.gradle
@@ -33,12 +33,16 @@ dependencies {
     api 'com.hyphenate:hyphenate-sdk-lite:3.6.1'
     api fileTree(dir: 'libs', include: ['*.jar'])
     api 'com.github.bumptech.glide:glide:4.7.1'
+    api 'org.greenrobot:eventbus:3.1.1'
+
 
 //    api 'com.google.android.gms:play-services-base:11.4.0'
 
 //    testImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
 //        exclude group: 'com.android.support', module: 'support-annotations'
 //    })
+
+    api 'com.android.support:appcompat-v7:28.0.0'
     api "androidx.appcompat:appcompat:1.0.0"
 //    testImplementation 'junit:junit:4.12'
 }
