--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="label,allowBackup">
+
+        <activity android:name=".business.me.LiuYanRootActivity"></activity>
+        <activity android:name=".business.me.LiuYanBanReturnActivity"></activity>
         <activity android:name=".business.me.MessageReturnActivity"></activity>
         <activity android:name=".business.me.AboutUsActivity" />
         <activity
