--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="label,allowBackup">
+
+        <activity android:name=".business.login.ChangePwActivity"></activity>
         <activity android:name=".business.me.LiuYanBanActivity"></activity>
         <activity android:name=".business.me.LiuYanRootActivity" />
         <activity android:name=".business.me.LiuYanBanReturnActivity" />
