--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="label,allowBackup">
-        <activity android:name=".business.message.HaoYouActivity"></activity>
+        <activity android:name=".business.home.SearchListActivity"></activity>
+        <activity android:name=".business.message.HaoYouActivity" />
         <activity android:name=".business.me.AddFriendActivity" />
         <activity
             android:name=".business.exhibitionhall.TuiGuangActivity"
