--- a/privately/app/build.gradle
+++ b/privately/app/build.gradle
@@ -219,7 +219,6 @@ dependencies {
     //状态栏
     implementation 'com.gyf.immersionbar:immersionbar:2.3.3-beta09'
 
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'androidx.multidex:multidex:2.0.0'
 
     //工具库
@@ -241,12 +240,16 @@ dependencies {
 
     implementation 'com.parse:parse-android:1.13.1'
 
-
     implementation 'com.arialyy.aria:aria-core:3.6.6'
     annotationProcessor 'com.arialyy.aria:aria-compiler:3.6.6'
     implementation 'com.lxj:xpopup:1.8.9'
     implementation 'com.orhanobut:logger:2.2.0'
     implementation 'com.yayandroid:LocationManager:2.0.4'
+    //查看大图
+    implementation 'indi.liyi.view:image-viewer:3.0.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation project(':library')
     implementation project(':easeui')
