--- a/privately/gradle.properties
+++ b/privately/gradle.properties
@@ -16,7 +16,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 android.useDeprecatedNdk=true
-release_Domain="https://app.cdnkey.com/api/v1/"
-debug_Domain="https://app.cdnkey.com/api/v1/"
+release_Domain="https://app.qyjczfh.com/api/v1/"
+debug_Domain="https://apptest.qyjczfh.com/api/v1/"
 
 
