--- a/privately/app/src/main/AndroidManifest.xml
+++ b/privately/app/src/main/AndroidManifest.xml
@@ -264,7 +264,7 @@
         </receiver> <!-- 设置环信应用的appkey -->
         <meta-data
             android:name="EASEMOB_APPKEY"
-            android:value="easemob-demo#chatdemoui" /> <!-- 声明sdk所需的service -->
+            android:value="1187190807041643#businesssharing" /> <!-- 声明sdk所需的service -->
         <service
             android:name="com.hyphenate.chat.EMChatService"
             android:exported="true"
